tests/regression/error/hw5_error22.sml
val prog =
  PROGRAM
    {classes=[],decls=["f"],
     funcs=[("g",{body=[],decls=[],params=[]}),
            ("f",{body=[],decls=[],params=[]})],stmts=[]} : program
;
